--- a/k2.css
+++ b/k2.css
@@ -55,12 +55,14 @@ body {
 }
 
 .content h2 {
+ font-family: 'Kosugi Maru', sans-serif;
  background: #4E9BC3;
  border: 2px solid #3A5C8E;
  margin: 10px;
  color: #fff;
 }
 .content p {
+  font-family: 'Kosugi Maru', sans-serif;
   margin: 10px;
   color: #444;
 }
